[package]
name = "rust-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
tokio = "1.15.0"
toml = "0.5.8"
web3 = { version = "0.17.0", default-features = false, features = [ "http-rustls-tls", "ws-tls-tokio" ] }
